05 26 2017 commit before reinstall window laptop

--- a/lawfirm/lawfirm.csproj
+++ b/lawfirm/lawfirm.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Models\Login\LoginRegisterModel.cs" />
     <Compile Include="Models\Login\UserAuthen.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\News\DetailTinTucModel.cs" />
     <Compile Include="Models\News\ListTintucModel.cs" />
     <Compile Include="Models\News\TintucModel.cs" />
     <Compile Include="Models\Practices\AnswerModel.cs" />
