--- a/lawfirm/Web.config
+++ b/lawfirm/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="lawfirmDbContext" connectionString="data source=.;initial catalog=TN_KL;user id=sa;password=sql2014;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="lawfirmDbContext1" connectionString="data source=.;initial catalog=TN_KL;user id=sa;password=sql2014;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="lawfirmDbContext" connectionString="data source=DESKTOP-RRHB4S4\SQLEXPRESS;initial catalog=TN_KL;user id=dev;password=dev;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
